# jlfine

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
apps/jelly/: Cargo.toml
apps/jelly/src/: main.rs
apps/jlfine/: Cargo.toml
apps/jlfine/src/: main.rs
apps/poc-bitperfect-mac/: Cargo.toml
apps/poc-bitperfect-mac/src/: main.rs
apps/poc-jellyfin-api/: Cargo.toml
apps/poc-jellyfin-api/src/: main.rs
apps/poc-libmpv/: Cargo.toml
apps/poc-libmpv/src/: main.rs
crates/audio-engine/: Cargo.toml
crates/audio-engine/src/: dop.rs  dsf.rs  lib.rs  linux.rs  mac.rs
crates/jelly-core/: Cargo.toml
crates/jelly-storage/: Cargo.toml
crates/jelly-storage/src/: lib.rs
crates/jelly-ui/: Cargo.toml
crates/jelly-ui/src/: lib.rs
crates/jelly-ui/ui/: jelly.slint
crates/jellyfin-api/: Cargo.toml
crates/jellyfin-api/src/: auth.rs  client.rs  error.rs  lib.rs  playback.rs  types.rs  urls.rs
crates/jlfine-core/: Cargo.toml
crates/jlfine-storage/: Cargo.toml
crates/jlfine-storage/src/: lib.rs
crates/jlfine-ui/: Cargo.toml  build.rs
crates/jlfine-ui/src/: lib.rs
crates/jlfine-ui/ui/: jelly.slint
crates/video-engine/: Cargo.toml
crates/video-engine/src/: lib.rs  mac.rs  mac_gl.rs
packaging/: jelly.desktop  jlfine.desktop
packaging/aur/jelly-bin/: PKGBUILD
packaging/aur/jelly-git/: PKGBUILD
packaging/aur/jlfine-bin/: PKGBUILD
packaging/aur/jlfine-git/: PKGBUILD
