[workspace]
resolver = "2"
members = [
    "crates/jellyfin-api",
    "crates/jelly-core",
    "crates/audio-engine",
    "crates/video-engine",
    "crates/jelly-storage",
    "crates/jelly-ui",
    "apps/jelly",
    "apps/poc-libmpv",
    "apps/poc-bitperfect-mac",
    "apps/poc-jellyfin-api",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Carlos <cprieto.ortiz@gmail.com>"]
license = "MIT OR Apache-2.0"
publish = false

[workspace.dependencies]
jellyfin-api = { path = "crates/jellyfin-api" }
jelly-core = { path = "crates/jelly-core" }
audio-engine = { path = "crates/audio-engine" }
video-engine = { path = "crates/video-engine" }
jelly-storage = { path = "crates/jelly-storage" }
jelly-ui = { path = "crates/jelly-ui" }

anyhow = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs", "time", "io-util"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = { version = "2", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", default-features = false, features = ["serde", "std"] }
bytes = "1"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
keyring = { version = "3", features = ["apple-native", "linux-native-sync-persistent", "windows-native"] }
directories = "5"
slint = "1.8"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.dev]
debug = "line-tables-only"
