[package]
name = "jlfine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "jlfine"
path = "src/main.rs"

[dependencies]
jellyfin-api.workspace = true
jlfine-core.workspace = true
audio-engine.workspace = true
video-engine.workspace = true
jlfine-storage.workspace = true
jlfine-ui.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
