[package]
name = "poc-libmpv"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "poc-libmpv"
path = "src/main.rs"

[dependencies]
libmpv2 = "6"
anyhow.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSResponder"] }
objc2-foundation = { version = "0.3", features = ["NSThread"] }
