[package]
name = "audio-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]

[target.'cfg(target_os = "macos")'.dependencies]

[target.'cfg(target_os = "linux")'.dependencies]
