[package]
name = "audio-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
thiserror.workspace = true
tracing.workspace = true
reqwest = { workspace = true, features = ["blocking"] }
symphonia = { version = "0.5", default-features = false, features = ["flac", "alac", "isomp4", "wav"] }
rtrb = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
coreaudio-sys = "0.2"
core-foundation = "0.10"

[target.'cfg(target_os = "linux")'.dependencies]
alsa = "0.11"
