[package]
name = "jelly-ui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
slint.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync"] }
jellyfin-api.workspace = true
jelly-storage.workspace = true
anyhow.workspace = true
url.workspace = true
tracing.workspace = true

[build-dependencies]
slint-build = "1.8"
