[package]
name = "jellyfin-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
url.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
serde_json.workspace = true
