[package]
name = "jlfine-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
keyring.workspace = true
directories.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3"
