[package]
name = "video-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
libmpv2 = "6"
thiserror.workspace = true
tracing.workspace = true
serde = { workspace = true }
serde_json.workspace = true
