[package]
name = "video-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
libmpv2 = "6"
thiserror.workspace = true
tracing.workspace = true
serde = { workspace = true }
serde_json.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
# NSWindow + NSEvent + NSView are reached through objc2's framework
# crates. We own the player window so mpv (via wid) only does
# rendering — key events flow through us into mpv_command.
objc2 = "0.5"
objc2-foundation = { version = "0.2", features = [
    "NSNotification",
    "NSOperation",
    "NSString",
    "block2",
] }
objc2-app-kit = { version = "0.2", features = [
    "NSWindow",
    "NSView",
    "NSEvent",
    "NSApplication",
    "NSResponder",
    "NSScreen",
    "NSGraphics",
    "block2",
] }
block2 = "0.5"
objc2-quartz-core = { version = "0.2", features = [
    "CALayer",
    "CAOpenGLLayer",
    "CATransaction",
] }
